--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ uvicorn = "^0.34.0"
 isort = "^6.0.1"
 minio = "^7.2.15"
 faststream = "^0.5.37"
+werkzeug = "^3.1.3"
+alembic = "^1.15.2"
 
 
 [build-system]
