--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ minio = "^7.2.15"
 faststream = "^0.5.37"
 werkzeug = "^3.1.3"
 alembic = "^1.15.2"
+fastapi-controllers = "^0.3.0"
+redis = {extras = ["asyncio"], version = "^5.2.1"}
+types-redis = "^4.6.0.20241004"
 
 
 [build-system]
