--- a/.env.example
+++ b/.env.example
@@ -2,12 +2,11 @@ DB_USER=postgres
 DB_PASSWORD=1234
 DB_IP=postgres
 DB_PORT=5432
-DB_NAME=vpn_db
+DB_NAME=deva_p1_db
 REDIS_IP=redis
 REDIS_PORT=6379
 RABBIT_USER=guest
 RABBIT_PASSWORD=guest
 RABBIT_IP=rabbitmq
 RABBIT_PORT=5672
-BOT_TOKEN=YOUR_BOT_TOKEN
 SECRET=YOUR_SECRET
