--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ alembic = "^1.15.2"
 fastapi-controllers = "^0.3.0"
 redis = {extras = ["asyncio"], version = "^5.2.1"}
 types-redis = "^4.6.0.20241004"
+asyncpg = "^0.30.0"
+aio-pika = "^9.5.5"
 
 
 [build-system]
