--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,8 @@ RABBIT_PASSWORD=guest
 RABBIT_IP=rabbitmq
 RABBIT_PORT=5672
 SECRET=YOUR_SECRET
+MINIO_IP=minio
+MINIO_PORT=9000
+MINIO_ACCESS_KEY=minioadmin
+MINIO_SECRET_KEY=minioadmin
+MINIO_BUCKET=my-bucket
