--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,8 @@ RABBIT_PORT=5672
 SECRET=YOUR_SECRET
 MINIO_IP=minio
 MINIO_PORT=9000
-MINIO_ACCESS_KEY=minioadmin
-MINIO_SECRET_KEY=minioadmin
+MINIO_USER=minioadmin
+MINIO_PASSWORD=minioadmin
+MINIO_ACCESS_KEY=nHoHadGrC2jZXAEiptOL
+MINIO_SECRET_KEY=nHoHadGrC2jZXAEiptOL
 MINIO_BUCKET=my-bucket
