--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ aio-pika = "^9.5.5"
 alembic = "^1.15.2"
 python-multipart = "^0.0.20"
 deva-p1-db = {git = "https://github.com/w1vern/deva_p1_db"}
+fastapi-sse = "^1.1.1"
 
 
 [build-system]
