--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ types-redis = "^4.6.0.20241004"
 aio-pika = "^9.5.5"
 alembic = "^1.15.2"
 python-multipart = "^0.0.20"
-deva-p1-db = {git = "https://github.com/w1vern/deva_p1_db", branch = "dev"}
+deva-p1-db = {git = "https://github.com/w1vern/deva_p1_db", branch = "main"}
 fastapi-sse = "^1.1.1"
 
 
