--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,31 +1,30 @@
-[tool.poetry]
+[project]
 name = "deva-p1-back"
 version = "0.1.0"
 description = ""
-authors = ["w1vern <bndvvl@gmail.com>"]
+authors = [{ name = "w1vern", email = "bndvvl@gmail.com" }]
 readme = "README.md"
+requires-python = ">=3.12"
 
-[tool.poetry.dependencies]
-python = "^3.12"
-pydantic = "^2.11.2"
-pydantic-settings = "^2.8.1"
-fastapi = "^0.115.12"
-pyjwt = "^2.10.1"
-python-dotenv = "^1.1.0"
-uvicorn = "^0.34.0"
-isort = "^6.0.1"
-minio = "^7.2.15"
-faststream = "^0.5.37"
-fastapi-controllers = "^0.3.0"
-redis = {extras = ["asyncio"], version = "^5.2.1"}
-types-redis = "^4.6.0.20241004"
-aio-pika = "^9.5.5"
-alembic = "^1.15.2"
-python-multipart = "^0.0.20"
-deva-p1-db = {git = "https://github.com/w1vern/deva_p1_db", branch = "dev"}
-fastapi-sse = "^1.1.1"
+dependencies = [
+    "pydantic>=2.11.2",
+    "pydantic-settings>=2.8.1",
+    "fastapi>=0.115.12",
+    "pyjwt>=2.10.1",
+    "python-dotenv>=1.1.0",
+    "uvicorn>=0.34.0",
+    "minio>=7.2.15",
+    "faststream>=0.5.37",
+    "fastapi-controllers>=0.3.0",
+    "redis[asyncio]>=5.2.1",
+    "types-redis>=4.6.0.20241004",
+    "aio-pika>=9.5.5",
+    "alembic>=1.15.2",
+    "python-multipart>=0.0.20",
+    "fastapi-sse>=1.1.1",
+    "deva-p1-db @ git+https://github.com/w1vern/deva_p1_db@dev",
+]
 
+[dependency-groups]
+dev = ["isort>=6.0.1"]
 
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
