--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,5 +28,5 @@ dependencies = [
 dev = ["isort>=6.0.1"]
 
 [tool.uv.sources]
-deva-p1-db = { git = "https://github.com/w1vern/deva_p1_db@dev" }
+deva-p1-db = { git = "https://github.com/w1vern/deva_p1_db", branch="dev" }
 
