--- a/.env.example
+++ b/.env.example
@@ -17,5 +17,5 @@ MINIO_PASSWORD=minioadmin
 MINIO_ACCESS_KEY=MINIO_ACCESS_KEY
 MINIO_SECRET_KEY=MINIO_SECRET_KEY
 MINIO_BUCKET=my-bucket
-
-WORKERS_COUNT=8
+MINIO_SECURE=0
+MINIO_URL=localhost:9000
