--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "alembic>=1.15.2",
     "python-multipart>=0.0.20",
     "deva-p1-db",
+    "websockets>=15.0.1",
 ]
 
 [dependency-groups]
