--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ requires-python = ">=3.12"
 dependencies = [
     "pydantic>=2.11.2",
     "pydantic-settings>=2.8.1",
-    "fastapi>=0.115.12",
+    "fastapi[all,standard]>=0.115.12",
     "pyjwt>=2.10.1",
     "python-dotenv>=1.1.0",
     "uvicorn>=0.34.0",
